Fixed chapter page button alignment

--- a/css/vr.css
+++ b/css/vr.css
@@ -88,19 +88,27 @@ body {
     height: 160px;
 }
 
-.chapter-page > i {
+.chapter-page > span {
     max-width: 50px;
     width: 4.62vw;
-    font-size: 1.2rem;
     max-height: 50px;
     height: 4.62vw;
     display: block;
     margin: 0 auto;
-    line-height: 2.75;
-    text-align: center;
     background: #ff6161;
+    position: relative;
     border-radius: 50%;
     box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.3);
+}
+
+.chapter-page > span > i {
+    display: block;
+    font-size: 1.2rem;
+    text-align: center;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
 }
 
 .chapter-page > p::before {
